CF2-206 Fix spacing between engagement cards

--- a/src/app/projects/project-engagement-details/project-engagement-details.component.scss
+++ b/src/app/projects/project-engagement-details/project-engagement-details.component.scss
@@ -2,4 +2,8 @@
 
 :host {
   @extend %component-defaults;
+
+  > * {
+    margin-bottom: 24px;
+  }
 }
