--- a/src/app/projects/project-overview/project-overview.component.scss
+++ b/src/app/projects/project-overview/project-overview.component.scss
@@ -16,8 +16,4 @@ app-project-overview-sidebar {
   flex: 1;
   background: mat-background($theme, background);
   padding: 24px;
-
-  > ::ng-deep * {
-    margin-bottom: 24px;
-  }
 }
